--- a/www/templates/contactChoose.html
+++ b/www/templates/contactChoose.html
@@ -15,7 +15,7 @@
         <ion-checkbox ng-model="email">E-mail</ion-checkbox>
         <ion-checkbox ng-model="line">LineID</ion-checkbox>
       </ion-list>
-      <input type="button" value="submit" class="button button-calm home_button margin-top-15" ng-click="addincident()">
+      <input type="button" value="submit" class="button button-calm home_button margin-top-15 background-43A143" ng-click="addincident()">
     </form>
     </div>
   </ion-content>
