--- a/www/templates/forgetPassword.html
+++ b/www/templates/forgetPassword.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class="bar-calm">
+  <ion-header-bar class="bar-calm background-B4E065">
     <h1 class="title">忘記密碼</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closeForget()">
@@ -23,7 +23,7 @@
           <div ng-show="forget_form.email.$error.email">Email格式錯誤</div>
         </div>
 
-        <input type="button" value="送出" class="button button-calm login_button margin-top-30" ng-click="forgetSubmit()">
+        <input type="button" value="送出" class="button button-calm login_button margin-top-30 background-43A143" ng-click="forgetSubmit()">
       </form>
     </div>
   </ion-content>
