--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -13,7 +13,7 @@
             <input class="login_input" type="password" name="password" ng-model="loginData.password" placeholder="Password" required>
           </div>
         </label>
-        <input type="button" value="登入" class="button button-calm login_button" ng-click="doLogin(login_form)">
+        <input type="button" value="登入" class="button button-calm login_button background-43A143" ng-click="doLogin(login_form)">
         <div class="margin-top-15 margin-0-25per text-align-center">
           <span class="color-FFF font-size-16" ng-click="register()">註冊</span>
           <span class="color-FFF font-size-16">|</span>
