--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,4 @@
-<ion-view view-title="HELP OTHERS">
+<ion-view view-title="幫幫你">
 	<ion-content>
 		<ion-pane>
 			<div ng-controller="MapCtrl">
@@ -6,7 +6,7 @@
 					<!-- </div><button class="button button-calm" ng-click="tst()">tst</button> -->
 					<div id="map" data-tap-disabled="true"></div>
 				</ion-content>
-				<button class="button button-fab button-fab-bottom-left ink-dark button-calm icon ion-android-refresh" ng-click="doRefresh()"></button>
+				<button class="button button-fab button-fab-bottom-left ink-dark button-calm background-43A143 icon ion-android-refresh" ng-click="doRefresh()"></button>
 			</div>
 		</ion-pane>
 
