--- a/www/templates/notificate.html
+++ b/www/templates/notificate.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class="bar-calm">
+  <ion-header-bar class="bar-calm background-B4E065">
     <h1 class="title">協助通知</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closeNotificate()">
@@ -9,6 +9,15 @@
   </ion-header-bar>
   <ion-content>
     <ion-list>
+	  <ion-item ng-controller="MapCtrl" ng-click="centerOnIncident()">
+  	  	<span>
+          <img src="http://upload.gezila.com/data/20150403/34691428024782.gif" width="50" height="50" align="top">
+        </span>
+  	  	<div>
+          <span>你有一個新任務!</span>
+          <span>主題:<a>oh my god</a></span>
+        </div>
+  	  </ion-item>
 	  <ion-item ng-controller="MapCtrl" ng-click="centerOnIncident()">
   	  	<span>
           <img src="http://upload.gezila.com/data/20150403/34691428024782.gif" width="50" height="50" align="top">
