--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,18 +20,38 @@ input.ng-dirty.ng-invalid {
   margin-bottom: 20%;
   width: 200px;
   height: 200px;
+  text-align: center;
+  line-height: 200px;
+}
+.logo_image {
+  margin: auto;
+  margin-top: 15%;
+  margin-bottom: 20%;
+  width: 200px;
+  height: 200px;
   border-radius: 100px;
-  background-image: url("../img/earth7.png");
+  background-image: url("../img/earth5.png");
   background-position: center;
   background-repeat: no-repeat;
   text-align: center;
   line-height: 200px;
   animation: spin 10s infinite linear;
 }
+.logo_text {
+  position: absolute;
+  top:0;
+  margin-top: 15%;
+  margin-bottom: 20%;
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  text-align: center;
+  line-height: 200px;
+}
 .login{
   margin: 0;
   bottom: 0;
-  background-image: url("../img/12939621_1163287290349757_1142194436_5.jpg");
+  background-image: url("../img/background-1.jpg");
   background-color: #cccccc;
 }
 .logo_login {
@@ -116,7 +136,7 @@ input.ng-dirty.ng-invalid {
   border: 0;
   border-radius: 10px !important;
   margin-top: 15px !important;
-  background: #00BBFF;
+  background: #43A143;
   color: #FFF;
 }
 .help_button:active {
@@ -324,8 +344,14 @@ input.ng-dirty.ng-invalid {
 .font-size-40 {
   font-size: 40px !important;
 }
+.font-size-50 {
+  font-size: 50px !important;
+}
 .font-size-60 {
   font-size: 60px !important;
+}
+.font-face-monospace{
+  font-family: monospace !important;
 }
 .line-height-20{
   line-height: 20px;
@@ -414,6 +440,9 @@ input.ng-dirty.ng-invalid {
 .background-A8BF7C{
 	background: #A8BF7C !important;
 }
+.background-43A143{
+  background: #43A143 !important;
+}
 .background-color-transparent{
 	background-color: transparent !important;
 }
@@ -437,4 +466,7 @@ input.ng-dirty.ng-invalid {
     left:500px;
     animation: spin 10s infinite linear;
     transform-origin: 290% 30px; /* 150px = path radius */
+}
+.box-shadow-0{
+  box-shadow: 0 !important;
 }
