--- a/www/templates/editmember.html
+++ b/www/templates/editmember.html
@@ -32,7 +32,7 @@
                         <i class="icon ion-email margin-right-10 text-align-center"></i>
                         <span class="input-label">Email</span>
                         <input type="email" name="email" ng-model="email" required>
-                    </label>                  
+                    </label>
 					<label class="item item-input">
 						<i class="icon ion-android-person margin-right-10 text-align-center"></i>
 						<span class="input-label">緊急聯絡人姓名</span>
@@ -43,9 +43,9 @@
 						<span class="input-label">緊急聯絡人電話</span>
 						<input type="text" name="contact_cel" ng-model="contact_cel" placeholder="聯絡人電話" required>
 					</label>
-					
-					
-					
+
+
+
 
                     <div class="alert" ng-show="register_form.account.$dirty && register_form.passwd.$dirty && register_form.name.$dirty && register_form.email.$dirty && register_form.location.$dirty">
                         <div ng-show="register_form.$error.required">帳號、密碼、姓名及Email、地區欄位不可為空</div>
@@ -60,7 +60,7 @@
                     <div class="alert" ng-show="register_form.email.$dirty">
                         <div ng-show="register_form.email.$error.email">Email格式錯誤</div>
                     </div>
-                    <input id="submit_button" type="button" value="送出" class="button button-calm home_button margin-top-30" ng-click="updateData()">
+                    <input id="submit_button" type="button" value="送出" class="button button-calm home_button margin-top-30 background-43A143" ng-click="updateData()">
                 </form>
             </div>
         </div>
