--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -39,7 +39,7 @@
         <i class="icon ion-trophy margin-right-10 text-align-center font-size-22"></i>
         <span class="input-label">評分</span>{{ help.rating }}
       </label>
-      <input type="button" value="完成事件" class="button button-calm login_button" ng-show="help.status == 'unsolved'" ng-click="solveIncident()">
+      <input type="button" value="完成事件" class="button button-calm login_button background-43A143" ng-show="help.status == 'unsolved'" ng-click="solveIncident()">
     </div>
   </ion-content>
 </ion-modal-view>
