--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,7 +2,10 @@
   <ion-content class="home" scroll="false">
     <!--<ion-refresher pulling-text="" on-refresh="doRefresh()"></ion-refresher>-->
     <div ng-controller="HomeCtrl">
-      <div class="logo"></div>
+      <div class="logo">
+        <div class="logo_image"></div>
+        <div class="logo_text color-FFF font-size-50 font-face-monospace">withU</div>
+      </div>
       <div>
         <button class="button button-stable ink-dark home_button" ng-click="helpMe()">HELP ME</button>
         <button class="button button-stable ink-dark home_button" ng-click="helpOthers()" >HELP OTHERS</button>
