--- a/www/templates/member.html
+++ b/www/templates/member.html
@@ -5,19 +5,24 @@
       <i class="ion-android-clipboard margin-right-10 color-A8BF7C font-size-22"></i>基本資料
     </div>
       <label class="item item-input">
+        <i class="icon ion-android-contact margin-right-10 text-align-center"></i>
         <span class="input-label">帳號</span> {{user_view.account}}
       </label>
       <label class="item item-input">
+        <i class="icon ion-locked margin-right-10 text-align-center"></i>
         <span class="input-label">密碼</span> {{user_view.password}}
       </label>
       <label class="item item-input">
+        <i class="icon ion-android-person margin-right-10 text-align-center"></i>
         <span class="input-label">姓名</span> {{user_view.name}}
       </label>
       <label class="item item-input">
-        <span class="input-label">手機</span> {{user_view.cellphone}}
+        <i class="icon ion-email margin-right-10 text-align-center"></i>
+        <span class="input-label">E-mail</span> {{user_view.email}}
       </label>
       <label class="item item-input">
-        <span class="input-label">E-mail</span> {{user_view.email}}
+        <i class="icon ion-iphone margin-right-10 text-align-center"></i>
+        <span class="input-label">手機</span> {{user_view.cellphone}}
       </label>
       <!--<input id="edit_button" type="button" value="修改資料" class="button button-calm home_button" ng-click="editMember()">-->
     </div>
@@ -26,14 +31,16 @@
       <i class="ion-android-call margin-right-10 color-A8BF7C font-size-22"></i>緊急聯絡人
     </div>
       <label class="item item-input">
+        <i class="icon ion-android-person margin-right-10 text-align-center"></i>
         <span class="input-label">聯絡人姓名</span> {{user_view.contact_name}}
       </label>
       <label class="item item-input">
+        <i class="icon ion-iphone margin-right-10 text-align-center"></i>
         <span class="input-label">聯絡人電話</span> {{user_view.contact_cel}}
       </label>
 
     </div>
-	<input id="edit_button" type="button" value="修改資料" class="button button-calm home_button" ng-click="editMember()">
+	<input id="edit_button" type="button" value="修改資料" class="button button-calm home_button background-43A143" ng-click="editMember()">
 
   </ion-content>
 </ion-view>
