--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -17,7 +17,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-calm background-B4E065">
+    <ion-header-bar id="app_header" class="bar-calm background-B4E065">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
@@ -32,28 +32,33 @@
         -->
         <ion-item menu-close href="#/app/addincident" class="item-icon-left">
           <i class="icon ion-medkit margin-right-10 font-size-22 color-B4E065"></i>
-          Addincident
-        </ion-item>
-        <ion-item menu-close href="#/app/member" class="item-icon-left">
-          <i class="icon ion-clipboard margin-right-10 font-size-22 color-B4E065"></i>
-          Member
-        </ion-item>
-        <ion-item menu-close href="#/app/incidentHistory" class="item-icon-left">
-          <i class="icon ion-filing margin-right-10 font-size-22 color-B4E065"></i>
-          Incident History
-        </ion-item>
-        <ion-item menu-close href="#/app/helpHistory" class="item-icon-left">
-          <i class="icon ion-ios-flag margin-right-10 font-size-22 color-B4E065"></i>
-          Help History
-        </ion-item>
-        <ion-item menu-close href="#/app/shop" class="item-icon-left">
-          <i class="icon ion-android-cart margin-right-10 font-size-22 color-B4E065"></i>
-          Shop
+          啾啾我
         </ion-item>
         <ion-item menu-close href="#/app/map" class="item-icon-left">
           <i class="icon ion-map margin-right-10 font-size-22 color-B4E065"></i>
-          Map
+          幫幫你
         </ion-item>
+        <ion-item menu-close href="#/app/member" class="item-icon-left">
+          <i class="icon ion-clipboard margin-right-10 font-size-22 color-B4E065"></i>
+          會員資料
+        </ion-item>
+        <ion-item menu-close href="#/app/incidentHistory" class="item-icon-left">
+          <i class="icon ion-filing margin-right-10 font-size-22 color-B4E065"></i>
+          事件紀錄
+        </ion-item>
+        <ion-item menu-close href="#/app/helpHistory" class="item-icon-left">
+          <i class="icon ion-ios-flag margin-right-10 font-size-22 color-B4E065"></i>
+          拯救紀錄
+        </ion-item>
+        <ion-item menu-close href="#/app/shop" class="item-icon-left">
+          <i class="icon ion-android-cart margin-right-10 font-size-22 color-B4E065"></i>
+          兌換折價券
+        </ion-item>
+        <ion-item menu-close href="#/app/myCoupon" class="item-icon-left">
+          <i class="icon ion-cash margin-right-10 font-size-22 color-B4E065"></i>
+          我的折價券
+        </ion-item>
+
         <!--<button class="button button-clear button-stable" style="margin-top:60px" ngclick="logout()">
           讓我登出拜託
         </button>-->
