--- a/www/templates/myCoupon.html
+++ b/www/templates/myCoupon.html
@@ -1,10 +1,6 @@
-<ion-view view-title="兌換折價券" ng-controller="ShopCtrl">
+<ion-view view-title="我的折價券" ng-controller="MyCouponCtrl">
   <ion-content>
     <ion-refresher on-refresh="doRefresh()" pulling-text="重新整理"></ion-refresher>
-    <div class="width-100per padding-30-0 background-2ADCD9 text-align-center color-FFF">
-      <div class="font-size-18">YOUR POINTS:</div>
-      <div class="margin-top-15 font-size-40">{{ points }}</div>
-    </div>
     <div class="font-size-25 padding-10-20 padding-top-20 color-f2c34b" ng-show="current_category == 1">
       <i class="icon ion-android-restaurant text-align-center"></i>
       飲食
@@ -26,31 +22,31 @@
       娛樂
     </div>
     <div class="list margin-bottom-50">
-      <a class="item item-thumbnail-left coupon" name="coupon" ng-repeat="coupon in coupons">
+      <a class="item item-thumbnail-left coupon" name="mycoupon" ng-repeat="mycoupon in mycoupons">
         <img src="img/material2.jpg">
-        <div class="font-size-18 margin-bottom-10">{{ coupon.name }}</div>
-        <div class="margin-bottom-5">{{ coupon.description }}</div>
+        <div class="font-size-18 margin-bottom-10">{{ mycoupon.name }}</div>
+        <div class="margin-bottom-5">{{ mycoupon.description }}</div>
         <div class="text-align-right font-size-22">
-          <i class="icon ion-ribbon-b margin-right-10 text-align-center font-size-22"></i>{{ coupon.price }}
+          <i class="icon ion-ribbon-b margin-right-10 text-align-center font-size-22"></i>{{ mycoupon.price }}
         </div>
       </a>
     </div>
   </ion-content>
   <div class="tabs-striped tabs-color-balanced">
     <div class="tabs">
-      <a id="couponCategory1" class="tab-item active ink-dark" ng-click="couponCategory(1)">
+      <a id="myCouponCategory1" class="tab-item active ink-dark" ng-click="couponCategory(1)">
         <i class="icon ion-android-restaurant"></i>
       </a>
-      <a id="couponCategory2" class="tab-item ink-dark" ng-click="couponCategory(2)">
+      <a id="myCouponCategory2" class="tab-item ink-dark" ng-click="couponCategory(2)">
         <i class="icon ion-ios-cart"></i>
       </a>
-      <a id="couponCategory3" class="tab-item ink-dark" ng-click="couponCategory(3)">
+      <a id="myCouponCategory3" class="tab-item ink-dark" ng-click="couponCategory(3)">
         <i class="icon ion-tshirt"></i>
       </a>
-      <a id="couponCategory4" class="tab-item ink-dark" ng-click="couponCategory(4)">
+      <a id="myCouponCategory4" class="tab-item ink-dark" ng-click="couponCategory(4)">
         <i class="icon ion-android-bus"></i>
       </a>
-      <a id="couponCategory5" class="tab-item ink-dark" ng-click="couponCategory(5)">
+      <a id="myCouponCategory5" class="tab-item ink-dark" ng-click="couponCategory(5)">
         <i class="icon ion-android-film"></i>
       </a>
     </div>
