--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -7,10 +7,10 @@
         <div class="logo_text color-FFF font-size-50 font-face-monospace">withU</div>
       </div>
       <div>
-        <button class="button button-stable ink-dark home_button" ng-click="helpMe()">HELP ME</button>
-        <button class="button button-stable ink-dark home_button" ng-click="helpOthers()" >HELP OTHERS</button>
+        <button class="button button-calm ink-dark home_button background-B4E065" ng-click="helpMe()">啾啾我</button>
+        <!--<button class="button button-calm ink-dark home_button background-FF57DE" ng-click="callMom()">卡齁阿母</button>-->
+        <button class="button button-calm ink-dark home_button margin-top-10 background-B4E065" ng-click="helpOthers()" >幫幫你</button>
       </div>
-	  <button class="button button-stable ink-dark home_button" ng-click="callMom()">卡齁阿母</button>
-    </div>
+      </div>
   </ion-content>
 </ion-view>
