--- a/www/templates/shop.html
+++ b/www/templates/shop.html
@@ -26,12 +26,14 @@
       娛樂
     </div>
     <div class="list margin-bottom-50">
-      <a class="item item-thumbnail-left coupon" name="coupon" ng-repeat="coupon in coupons">
+      <a id="couponID{{coupon.id}}" class="item item-thumbnail-left coupon" name="coupon" ng-repeat="coupon in coupons" ng-click="buyCoupon()">
         <img src="img/material2.jpg">
+        <div class="couponId" style="display:none">{{ coupon.id }}</div>
         <div class="font-size-18 margin-bottom-10">{{ coupon.name }}</div>
         <div class="margin-bottom-5">{{ coupon.description }}</div>
         <div class="text-align-right font-size-22">
-          <i class="icon ion-ribbon-b margin-right-10 text-align-center font-size-22"></i>{{ coupon.price }}
+          <i class="icon ion-ribbon-b margin-right-10 text-align-center font-size-22"></i>
+          <span class="couponPrice">{{ coupon.price }}</span>
         </div>
       </a>
     </div>
