APP內通知(只有ask help還沒)

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -84,6 +84,7 @@ input.ng-dirty.ng-invalid {
   margin-bottom: 10px !important;
   width: 64%;
   border-radius: 25px !important;
+  font-size:50px;
 }
 .register_button {
   display: block;
