已解決: 1.期限還沒有load進去 2.說明太長，要換行 3.種類那行，刪掉 4.紀錄順序，最新的在最上面 5.sidemenu的啾啾我、幫幫你，刪除 6.不可以自己按自己的HELP按鈕 7.事件種類、所在位置(只需要直接GPS定位)刪除 8.新增事件的required（沒有東西也可以新增事件）要小心～ 9.新增超人

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -48,6 +48,18 @@ input.ng-dirty.ng-invalid {
   text-align: center;
   line-height: 200px;
 }
+.logo_superman {
+  position: absolute;
+  top:0;
+  margin-top: 48%;
+  margin-bottom: 40%;
+  width: 200px;
+  height: 200px;
+  background-image: url("../img/supermandon2.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  line-height: 200px;
+}
 .login{
   margin: 0;
   bottom: 0;
@@ -472,9 +484,10 @@ input.ng-dirty.ng-invalid {
     height:93px;
     top:16%;
     left:500px;
+    background-image: url("../img/supermandon.gif");
     animation: spin 10s infinite linear;
     transform-origin: 290% 30px; /* 150px = path radius */
 }
-.box-shadow-0{
-  box-shadow: 0 !important;
+.white-space-normal{
+  white-space: normal !important;
 }
