--- a/www/templates/helpHistory.html
+++ b/www/templates/helpHistory.html
@@ -5,7 +5,7 @@
       <i class="icon ion-android-contacts margin-right-10 color-11c1f3"></i> <span>等待求助者配對</span>
     </div>
     <div class="font-size-25 padding-10-20 padding-10-20 color-f2c34b" ng-show="current_status == 'ask rating'">
-      <i class="icon ion-help-circled margin-right-10 color-FFDC00"></i> <span>求助者尚未評分</span>
+      <i class="icon ion-thumbsup margin-right-10 color-FFDC00"></i> <span>求助者尚未評分</span>
     </div>
     <div class="font-size-25 padding-10-20 padding-10-20 color-f2c34b" ng-show="current_status == 'unsolved'">
       <i class="icon ion-help-circled margin-right-10 color-FFDC00"></i> <span>解決中</span>
