--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,6 +4,7 @@
     <div ng-controller="HomeCtrl">
       <div class="logo">
         <div class="logo_image"></div>
+        <div class="logo_superman"></div>
         <div class="logo_text color-FFF font-size-50 font-face-monospace">withU</div>
       </div>
       <div>
