--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -29,7 +29,7 @@
         <ion-item menu-close href="#/app/register">
           Register
         </ion-item>
-        -->
+
         <ion-item menu-close href="#/app/addincident" class="item-icon-left">
           <i class="icon ion-medkit margin-right-10 font-size-22 color-B4E065"></i>
           啾啾我
@@ -37,7 +37,7 @@
         <ion-item menu-close href="#/app/map" class="item-icon-left">
           <i class="icon ion-map margin-right-10 font-size-22 color-B4E065"></i>
           幫幫你
-        </ion-item>
+        </ion-item>-->
         <ion-item menu-close href="#/app/member" class="item-icon-left">
           <i class="icon ion-clipboard margin-right-10 font-size-22 color-B4E065"></i>
           會員資料
