--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -8,7 +8,7 @@
         <div class="logo_text color-FFF font-size-50 font-face-monospace">withU</div>
       </div>
       <div>
-        <button class="button button-calm ink-dark home_button background-B4E065" ng-click="helpMe()">呼叫超人</button>
+        <button class="button button-calm ink-dark home_button margin-top-20 background-B4E065" ng-click="helpMe()">呼叫超人</button>
         <!--<button class="button button-calm ink-dark home_button background-FF57DE" ng-click="callMom()">卡齁阿母</button>-->
         <button class="button button-calm ink-dark home_button margin-top-10 background-B4E065" ng-click="helpOthers()" >最新情報地圖</button>
       </div>
