APP通知icon有新的通知會出現標示(尚未完成)

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,7 @@
-<ion-view view-title="withU">
+<ion-view view-title="withU" ng-controller="HomeCtrl">
   <ion-content class="home" scroll="false">
     <!--<ion-refresher pulling-text="" on-refresh="doRefresh()"></ion-refresher>-->
-    <div ng-controller="HomeCtrl">
+    <div>
       <div class="logo">
         <div class="logo_image"></div>
         <div class="logo_superman"></div>
