--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,7 +9,8 @@
         </button>
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
-        <button ng-controller="NotificateCtrl" class="button button-clear icon ion-chatbubble-working" ng-click="notificate()"></button>
+        <button ng-controller="NotificateCtrl" class="button button-clear icon ion-android-notifications" ng-click="notificate()"></button>
+        <div id="notification_icon" style="display:none">n</div>
         <button class="button button-clear icon ion-home" href="#/app/home" ng-click="home()"></button>
       </ion-nav-buttons>
     </ion-nav-bar>
