--- a/www/css/style.css
+++ b/www/css/style.css
@@ -187,6 +187,20 @@ input.ng-dirty.ng-invalid {
   padding-top: 16px;
   margin:0;
 }
+#notification_icon{
+  position: absolute;
+  top: 20px;
+  right: 55px;
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+  background: #FFDC00;
+  color: #FFF;
+  font-size: 10px;
+  text-align: center;
+  line-height: 16px;
+  z-index: 4;
+}
 .logout_button {
   position: absolute;
   bottom: 100 px;
