--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -8,7 +8,7 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <div class="list" ng-controller="HelpViewCtrl">
+    <div class="list" ng-controller="HelpHistoryCtrl">
       <div id="current_incident_number" style="display: none;"> {{ help.number }}</div>
       <label class="item item-input">
         <i class="icon ion-ios-pricetag margin-right-10 text-align-center font-size-22"></i>
