--- a/www/templates/incident.html
+++ b/www/templates/incident.html
@@ -8,7 +8,7 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <div class="list" ng-controller="IncidentViewCtrl">
+    <div class="list" ng-controller="IncidentHistoryCtrl">
       <div id="current_incident_number" style="display: none;"> {{ incident.number }}</div>
       <label class="item item-input">
         <i class="icon ion-ios-pricetag margin-right-10 text-align-center font-size-22"></i>
@@ -51,7 +51,7 @@
       </ion-list>
       <div id="helper_choice" style="display: none">{{ data.choice }}</div>
       <input type="button" value="與Helper配對" class="button button-calm login_button background-43A143" ng-show="incident.status == 'matching'" ng-click="matchHelper()">
-      <input type="button" value="取消事件" class="button button-calm login_button background-E14F2B" ng-hide="incident.status == 'ask rating' || incident.status == 'solved'" ng-click="cancelIncident()">    
+      <input type="button" value="取消事件" class="button button-calm login_button background-E14F2B" ng-hide="incident.status == 'ask rating' || incident.status == 'solved'" ng-click="cancelIncident()">
     </div>
   </ion-content>
 </ion-modal-view>
